[package]
name = "haagenti-zstd"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Zstandard-inspired compression for Haagenti (internal format, not Zstd-compatible)"
keywords = ["compression", "zstd", "zstandard", "pure-rust"]
categories = ["compression", "encoding"]

[features]
default = ["std", "simd"]
std = ["haagenti-core/std"]
simd = ["haagenti-simd"]
dictionary = []  # Dictionary compression support
parallel = ["std", "rayon"]  # Parallel compression (4-stream Huffman, etc.)

[dependencies]
haagenti-core = { workspace = true }
haagenti-simd = { workspace = true, optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
zstd = { workspace = true }
rand = { workspace = true }
half = "2.4"

[[bench]]
name = "zstd_benchmark"
harness = false

[[bench]]
name = "general_purpose_benchmark"
harness = false
